# Redmine

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: deploy-render.yml
scripts/: wait_for_render_deploy.py
src/redmine/: __init__.py  app.py  bitrix_client.py  capture_bitrix_snapshots.py  capture_snapshots.py  config.py  dates.py  db.py  main.py  redmine_client.py  snapshots.py
tests/: test_basic.py
